Migrate commons to v3.0.0 with java 17 and SpringBoot 2.6.6